hphp/hack/test/typecheck/await_in_expressions6.php.exp
File "await_in_expressions6.php", line 5, characters 12-19:
`await` cannot be used as an expression in this location because it's conditionally executed. (Parsing[1002])
