hphp/hack/test/typecheck/await_in_expressions6.php
<?hh // strict

async function f1(Awaitable<int> $a): Awaitable<void> {
  do {
  } while (await $a);
}
